# courses-python-mm

./: .pylintrc  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/dev_droga_courses/: app.py  db.py
src/dev_droga_courses/shared/: money.py  service.py  unchangable.py
src/dev_droga_courses/subscription/plan/: __init__.py  cmd.py  db.py  exce.py  individual.py  repository.py  service.py  settings.py
src/integration-tests/subscription/plan/: test_db.py  test_define.py
src/tests/: utils.py
src/tests/shared/: factories.py  test_unchangable.py
src/tests/subscription/plan/: __init__.py  factories.py  in_memory.py  test_activate.py  test_deactivate.py  test_define.py
