[options]
zip_safe = True
include_package_data = True

[bdist_wheel]
python-tag = py38

[coverage:run]
branch = True

[coverage:report]
fail_under = 100
exclude_lines =
    def __repr__
    @abstractmethod
    raise NotImplementedError
    raise
    except:  # noqa

[pycodestyle]
max_line_length = 80
show_pep8 = True
show_source = True

[flake8]
max-line-length = 80
